chore: add name

--- a/Lab01/Test_Análisis_exploratorio_de_datos_del_Titanic.ipynb
+++ b/Lab01/Test_Análisis_exploratorio_de_datos_del_Titanic.ipynb
@@ -6,8 +6,9 @@
         "id": "sj4SHzMzAQ-t"
       },
       "source": [
-        "Autor:  \n",
-        "Manuel Eugenio Morocho Cayamcela, PhD"
+        "Autor: Manuel Eugenio Morocho Cayamcela, PhD\n",
+        "\n",
+        "Estudiante: Brandon Andrés Jiménez Nieto"
       ]
     },
     {
