docs: add my name

--- a/Lab02/Test_Análisis_exploratorio_con_los_datos_de_California_Housing_Prices.ipynb
+++ b/Lab02/Test_Análisis_exploratorio_con_los_datos_de_California_Housing_Prices.ipynb
@@ -6,8 +6,9 @@
         "id": "8bE8pcC_d7Om"
       },
       "source": [
-        "Autor:  \n",
-        "Manuel Eugenio Morocho Cayamcela, PhD"
+        "Autor: Manuel Eugenio Morocho Cayamcela, PhD\n",
+        "\n",
+        "Estudiante: Brandon Andrés Jiménez Nieto"
       ]
     },
     {
