feat: drawing a bounding box with openCV

--- a/Lab06/1_Drawing_a_Bounding_Box_with_OpenCV.ipynb
+++ b/Lab06/1_Drawing_a_Bounding_Box_with_OpenCV.ipynb
@@ -483,7 +483,7 @@
         "id": "GAUnnBuL-ZpS"
       },
       "source": [
-        "Instead of drawing the boxes by hand, we can use a model that already knows how to find objects in a picture, for example, YOLO. This model looks at the image, figures out what objects are there, and draws the boxes automatically. So, if I use the photo with the pizza and the burger, the model detects both by itself. It’s like having a tool that has already learned to recognize many common objects, and we just take advantage of it to save time."
+        "A good way to do this would be to use a model such as YOLO, which is already trained to detect objects automatically. This model analyzes the entire image and, instead of requiring us to manually define the coordinates, it identifies the objects, determines their locations, and draws the bounding boxes on its own. For example, if we use the picture with the pizza and the burger, the model detects both and marks them with its own boxes. It works as a visual detector capable of recognizing multiple types of objects at once, saving us from doing the process manually."
       ]
     },
     {
