feat: drawing a bounding box with openCV

--- a/Lab06/1_Drawing_a_Bounding_Box_with_OpenCV.ipynb
+++ b/Lab06/1_Drawing_a_Bounding_Box_with_OpenCV.ipynb
@@ -483,7 +483,7 @@
         "id": "GAUnnBuL-ZpS"
       },
       "source": [
-        "A good way to do this would be to use a model such as YOLO, which is already trained to detect objects automatically. This model analyzes the entire image and, instead of requiring us to manually define the coordinates, it identifies the objects, determines their locations, and draws the bounding boxes on its own. For example, if we use the picture with the pizza and the burger, the model detects both and marks them with its own boxes. It works as a visual detector capable of recognizing multiple types of objects at once, saving us from doing the process manually."
+        "A way to automatically find the points x1, y1, x2, and y2 would be to make a program that looks for areas in the image where the color or shape changes, because those changes usually show the edges of an object. For example, when there is a pizza on a plate, the edge of the pizza can be seen because its color and texture are different from the plate. The program could scan the image and mark the areas where it detects strong changes, helping it identify where the object begins and ends. Then, it could draw a rectangle around that area, starting from the top-left point (x1, y1) and ending at the bottom-right point (x2, y2). To check if the points are the most accurate or optimal, we can make sure the rectangle covers the entire object without leaving too much empty space or cutting any part of it."
       ]
     },
     {
